Fix artist title on tablet portrait

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -823,6 +823,8 @@ font-size: 10px;
 padding: 2px;
 }	
 
+.row.portrait .artist-title {padding: 0px 15px;}
+
 }
 
 
